src/app.css
:root {
    font-family: "Instrument Sans Variable", system-ui, Helvetica, Arial, sans-serif;
    line-height: 1.2;
    font-weight: 500;
    letter-spacing: -0.01rem;

    color: #ffffff;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    user-select: none;

    --white: #ffffff;
    --black: #000000;

    --helium-gradient: linear-gradient(180deg, #152671 0%, #31428c 53%, #4e5fa9 100%);
    --helium-elevated: #afbeff;
    --helium-elevated-10: rgba(175, 190, 255, 0.1);
    --helium-elevated-20: rgba(175, 190, 255, 0.2);
    --helium-elevated-25: rgba(175, 190, 255, 0.25);
    --helium-elevated-30: rgba(175, 190, 255, 0.3);
    --helium-elevated-40: rgba(175, 190, 255, 0.4);
    --helium-elevated-80: rgba(175, 190, 255, 0.8);

    --white-80: rgba(255, 255, 255, 0.8);
    --white-90: rgba(255, 255, 255, 0.9);

    --gap-1: 12px;
    --gap-2: 24px;

    --page-scroll-gradient-mask: linear-gradient(
        to bottom,
        rgba(0, 0, 0, 1) 80%,
        rgba(0, 0, 0, 0.1) 90%,
        rgba(0, 0, 0, 0) 100%
    );
}

body {
    margin: 0;
    display: flex;
    justify-content: center;
    min-height: 100vh;
    background: var(--helium-gradient);
    overflow: hidden;
}

*::-webkit-scrollbar {
    display: none;
}

h1, h2, h4{
    font-weight: 500;
    line-height: 1.2;
    margin-block: 0;
    margin-inline: 0;
}

h1 {
    font-size: 48px;
}

h2 {
    font-size: 32px;
}

h4 {
    font-size: 18px;
}

p {
    margin: 0;
    font-size: 16px;
    line-height: 1.2;
    color: var(--helium-elevated);
}

h1, h2, p {
    white-space: pre-line;
}

button {
    appearance: none;
    letter-spacing: inherit;
    word-spacing: unset;
    line-height: inherit;
    text-indent: 0px;
    text-shadow: none;
    text-align: center;
    cursor: pointer;
    box-sizing: border-box;
    margin: 0em;
    padding-block: 0;
    padding-inline: 0;
    border: none;
    font-family: inherit;
    font-weight: inherit;
}

button, .button {
    color: var(--white);
    background-color: var(--helium-elevated-20);

    font-size: 16px;
    padding: 11px 18px;
    border-radius: 12px;

    transition: 0.1s background-color, 0.2s transform, 0.2s opacity;
    will-change: transform;

    display: flex;
    align-items: center;
    gap: 9px;

    &:hover {
        background-color: var(--helium-elevated-25);
        transform: scale(1.03);

        &:active {
            background-color: var(--helium-elevated-30);
            transform: scale(0.98);
        }
    }

    &.primary {
        color: var(--black);
        background-color: var(--white);

        &:hover {
            background-color: var(--white-90);

            &:active {
                background-color: var(--white-80);
            }
        }
    }

    &.big {
        width: -webkit-fill-available;
        text-align: left;
        border-radius: 24px;
        padding: 16px 21px;

        &:hover {
            transform: scale(1.005);

            &:active {
                transform: scale(0.995);
            }
        }
    }

    &.inactive,
    &:disabled {
        pointer-events: none;
        opacity: 0.5;
    }

    &.selected {
        box-shadow: 0 0 0 2px var(--white) inset;
    }

    & svg {
        height: 21px;
        width: 21px;
        stroke-width: 1.5px;
    }
}

.onboarding-page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    text-align: center;
    width: 100%;
    height: 100%;
    left: 0;

    position: absolute;
    will-change: transform, filter, opacity;
}

.scrollable-page {
    max-width: 600px;
    overflow-x: scroll;
    overflow-y: visible;
    /* 20px - accommodation for hover effects */
    padding: 20px;
    padding-top: 0;
    /* 150px - accommodation for navigation buttons */
    padding-bottom: 150px;
    mask-image: var(--page-scroll-gradient-mask);
}

.page-content {
    display: flex;
    flex-direction: column;
    gap: var(--gap-1);
    margin-top: var(--gap-2);
    align-items: center;
}

.trademark-disclaimer {
    font-size: 12px;
    max-width: 700px;
    position: absolute;
    bottom: 19px;
    color: var(--helium-elevated);
}

@keyframes main-zoom-blur-in {
    from {
        transform: scale(0.75);
        filter: blur(12px);
        opacity: 0;
    }
    55% {
        transform: scale(1.015);
        opacity: 1;
    }
    100% {
        transform: scale(1);
    }
    to {
        opacity: 1;
    }
}

@keyframes zoom-blur-in {
    from {
        transform: scale(1.3);
        filter: blur(12px);
        opacity: 0;
    }
    55% {
        transform: scale(0.995);
        opacity: 1;
    }
    100% {
        transform: scale(1);
    }
    to {
        opacity: 1;
    }
}

@keyframes zoom-blur-out {
    0% {
        opacity: 1;
        visibility: visible;
    }
    100% {
        transform: scale(0.9);
        filter: blur(12px);
        opacity: 0;
    }
    to {
        visibility: hidden;
        opacity: 0;
    }
}

